# Amusive-Blogging-N-Coding

./: README.md  pyproject.toml
Carbon Footprint/: README.md  codecarbon_experiments.ipynb
Cellular Automata/: README.md  cellular_automata.ipynb
Differentiation/: README.md  derivatives_with_chatgpt.ipynb
Hyperparameters Search/: HiPlot_Tutorial.ipynb  README.md  hiplt_data.json
Integration/: README.md  rieman_stieltjes_sums.ipynb  riemann_sums.ipynb
Interactive Dataviz/: README.md  index.html  laptops.csv  laptops_updated.csv  parallel_coordinates_laptops.css  parallel_coordinates_laptops.js  preprocess_laptop_dataset.ipynb
JavaScript Visualization Zoo/: README.md
JavaScript Visualization Zoo/Charting/apex/: index.html  style.css
JavaScript Visualization Zoo/Charting/data/: life-expectancy-apex.json
JavaScript Visualization Zoo/Charting/nvd3/: chart.js  index.html
JavaScript Visualization Zoo/Charting/plotly/: chart.js
JavaScript Visualization Zoo/Graphs/: README.md  index.html  transform_data.ipynb
JavaScript Visualization Zoo/Graphs/.ipynb_checkpoints/: transform_data-checkpoint.ipynb
JavaScript Visualization Zoo/Graphs/css/: index.css  open-sans.css
JavaScript Visualization Zoo/Graphs/datasets/: jdk_dependency.json
JavaScript Visualization Zoo/Graphs/js/: cytoscape-cola.js  index.js
JavaScript Visualization Zoo/Graphs/raw_data/: README.subelj_jdk  ent.subelj_jdk_jdk.class.name  meta.subelj_jdk_jdk  out.subelj_jdk_jdk
JavaScript Visualization Zoo/Graphs/stylesheets/: style.json
JavaScript Visualization Zoo/apex/: chart.js
JavaScript Visualization Zoo/data/: life-expectancy-nvd.json  life-expectancy-plotly.json  life_expectancy_transform.ipynb
JavaScript Visualization Zoo/plotly/: chart.js  index.html
Profiling/: README.md  attention.py  profilers_experiments.ipynb
Random Processes/: README.md  brownian_motion_animation.ipynb  drifted_brownian_motion.ipynb  geometric_brownian_motion.ipynb  random_walk_animation.ipynb
Visualizations/: README.md  altair_plotting.ipynb  barnsley_fern.ipynb  bifurcation_diagram.ipynb  calculate_area_animation.ipynb  jax_gradient_with_walrus_op.ipynb  julia_set.ipynb  loss_per_class.ipynb  mandelbrot.ipynb  pandas_plotting.ipynb  reflection_principle_bm.ipynb  riemann_zeta_zeros.ipynb  sierpinski_triangle.ipynb  snowflake.ipynb  student_to_gaussian_convergence.ipynb
