[tool.poetry]
name = "amusive-blogging-n-coding"
version = "0.1.0"
description = "code from the hands-on blog posts at iSquared.digital"
authors = ["IlievskiV"]
license = "GNU GENERAL PUBLIC LICENSE"
readme = "README.md"
packages = [{include = "amusive_blogging_n_coding"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
matplotlib = "^3.6.3"
ipykernel = "^6.20.1"
jupyter = "^1.0.0"
ipywidgets = "^8.0.4"
mpmath = "^1.2.1"

# carbon footprint
codecarbon = {version = "^2.1.4", optional = true}
dash = {version = "2.7.1", optional = true}
dash-bootstrap-components = {version = "0.13.1", optional = true}
fire = {version = "0.5.0", optional = true}
tensorflow = {version = "^2.9.3", optional = true}

# visualizations
altair = {version = "^4.2.2", optional = true}
vega-datasets = {version = "^0.9.0", optional = true}

[tool.poetry.extras]
carbon_footprint = [
    "codecarbon",
    "tensorflow",
    "dash",
    "dash-bootstrap-components",
    "fire"
]

visualizations = [
    "altair",
    "vega-datasets"
]

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
