[tool.poetry]
name = "amusive-blogging-n-coding"
version = "0.1.0"
description = "code from the hands-on blog posts at iSquared.digital"
authors = ["IlievskiV"]
license = "GNU GENERAL PUBLIC LICENSE"
readme = "README.md"
packages = [{include = "amusive_blogging_n_coding"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
matplotlib = "^3.6.3"
ipykernel = "^6.20.1"
jupyter = "^1.0.0"
ipywidgets = "^8.0.4"
mpmath = "^1.2.1"
torch = "^1.13.1"

# carbon footprint
[tool.poetry.group.carbon_footprint]
optional = true

[tool.poetry.group.carbon_footprint.dependencies]
codecarbon = "^2.1.4"
dash = "2.7.1"
dash-bootstrap-components =  "0.13.1"
fire = "0.5.0"
tensorflow = "^2.9.3"

# visualizations
[tool.poetry.group.visualizations]
optional = true

[tool.poetry.group.visualizations.dependencies]
altair =  "^4.2.2"
vega-datasets = "^0.9.0"
scipy = "^1.10.0"

# profiling
[tool.poetry.group.profiling]
optional = true

[tool.poetry.group.profiling.dependencies]
line-profiler = "^4.0.2"
memory-profiler = "^0.61.0"
snakeviz = "^2.1.1"
pyinstrument = "^4.4.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.4"


[tool.poetry.group.profilers.dependencies]
pyinstrument = "^4.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
